Resolve white space in index and contact page and icon contact color

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ $background-opacity: 0.9;
   box-sizing: border-box;
 }
 
-body {
+#bg-img {
   @include background;
   background-color: $primary-color;
   color: #fff;
@@ -192,6 +192,7 @@ main {
   main#home {
     text-align: center;
     align-items: center;
+    height: 100vh;
     h1 {
       margin-top: 10vh;
       line-height: 1;
@@ -229,6 +230,8 @@ $secondary-color: #eece1a;
 #about-me-page {
   margin-left: 2%;
   margin-right: 2%;
+  background-color: $primary-color;
+  color: #fff;
   h1.lg-heading {
     text-align: center;
   }
@@ -279,7 +282,9 @@ $secondary-color: #eece1a;
       color: $secondary-color;
     }
     span {
+      color: #eece1a;
       font-weight: bold;
+      text-decoration: underline #fff;
     }
   }
 }
@@ -432,6 +437,7 @@ $secondary-color: #eece1a;
   place-items: center;
   background: url(.././images/contact-background.jpg) no-repeat;
   background-size: cover;
+  height: 100vh;
   form {
     background-color: rgba(15, 13, 13, 0.5);
     margin: auto;
@@ -453,7 +459,6 @@ $secondary-color: #eece1a;
 
     .contact-me {
       padding: 0 30px;
-      height: 100%;
 
       #error_message {
         margin-bottom: 20px;
@@ -515,10 +520,10 @@ $secondary-color: #eece1a;
   //Contact form after overlay button
   #contact-background {
     display: block;
-
+    height: 100%;
     form {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       background-color: rgba(15, 13, 13, 0.5);
       margin: auto;
 
@@ -537,7 +542,6 @@ $secondary-color: #eece1a;
 
       .contact-me {
         padding: 0 30px;
-        height: 100%;
 
         #error_message {
           margin-bottom: 10px;
